# deep500

./: .gitignore  LICENSE  README.md  setup.py
deep500/: __init__.py  recipe.py
deep500/datasets/: __init__.py  cifar.py  imagenet.py  mnist.py  ucf101.py
deep500/frameworks/caffe2/: __init__.py  caffe2_distributed_optimizer.py  caffe2_graph_executor.py  caffe2_network.py  caffe2_visitor_impl.py  op_validation.py
deep500/frameworks/caffe2/support/: CMakeLists.txt  mpi_operations.cc  mpi_operations.h
deep500/frameworks/pytorch/: __init__.py  op_validation.py  pytorch_graph_executor.py  pytorch_network.py  pytorch_optimizers.py  pytorch_visitor.py
deep500/frameworks/pytorch/custom_operators/: CMakeLists.txt  pytorch.py  pytorch.tmpl - Copy.cpp  pytorch.tmpl.cpp
deep500/frameworks/reference/: __init__.py  augmentation.py  distributed_optimizers.py  optimizers.py  reference_build_graph_visitor_impl.py  reference_build_graph_visitor_impl_cpp.py  reference_graph_executor.py  reference_network.py
deep500/frameworks/reference/custom_operators/: CMakeLists.txt  base.py  base.tmpl.cpp  custom_op_cpp.py  custom_op_python.py
deep500/frameworks/reference/custom_operators/cpp/operators/: add_op.cpp  averagepool_op.cpp  batchnormalization_op_inference.cpp  batchnormalization_op_training.cpp  conv_op.cpp  gemm_op.cpp  globalaveragepool_op.cpp  matmul_op.cpp  maxpool_op.cpp  relu_op.cpp  reshape_op.cpp  softmax_op.cpp  sum_op.cpp
deep500/frameworks/reference/custom_operators/cpp/utility/math/: gemm.hpp  mean.hpp  variance.hpp
deep500/frameworks/reference/custom_operators/cpp/utility/math/convolution/: autopadding.hpp  convolution_output_shape.hpp  crosscorrelation.hpp  crosscorrelation_dilx_flipw.hpp  crosscorrelation_swap_axes.hpp
deep500/frameworks/reference/custom_operators/cpp/utility/tensor/: broadcast.hpp  copy_data.hpp  indexing.hpp  replicate.hpp  set_all.hpp  transpose2d.hpp
deep500/frameworks/reference/custom_operators/python/: add_op.py  averagepool_op.py  batchnormalization_op_inference.py  batchnormalization_op_training.py  conv_op.py  conv_op_common.py  crossentropy_op.py  gemm_op.py  globalaveragepool_op.py  labelcrossentropy_op.py  matmul_op.py  maxpool_op.py  meansquarederror_op.py  pool_op_common.py  relu_op.py  reshape_op.py  softmax_crossentropy_op.py  softmax_op.py  squeeze_op.py  sum_op.py  unsqueeze_op.py
deep500/frameworks/tensorflow/: __init__.py  op_validation.py  tf_distributed_optimizer.py  tf_graph_executor.py  tf_network.py  tf_optimizers.py  tf_visitor_impl.py
deep500/frameworks/tensorflow/custom_operators/: CMakeLists.txt  tf.py  tf.tmpl.cpp
deep500/lv0/operators/: cmake_wrapper.py  op_compiler.py  operator_interface.py
deep500/lv0/operators/include/deep500/: deep500.h
deep500/lv0/operators/tools/: get_cuda_arch.cpp
deep500/lv0/validation/: __init__.py  forward.py  gradient.py  metrics.py
deep500/lv1/: event.py  graph_executor.py  network.py
deep500/lv1/validation/: __init__.py  executor.py
deep500/lv2/: dataset.py  event.py  optimizer.py  runner.py  sampler.py  summaries.py  trainer.py
deep500/lv2/events/: __init__.py  hyperparameter_schedule.py  save_wrongs.py  stopping_conditions.py  summary_boxplots.py  summary_csv.py  summary_generator.py  summary_lossplot.py  training_progress.py
deep500/lv2/validation/: __init__.py  metrics.py  optimizer.py  sampler.py  training.py
deep500/lv3/: communication.py  distributed_optimizer.py  distributed_sampler.py  metrics.py
deep500/networks/: __init__.py  pytorch_deep_mnist.py  pytorch_mnist.py  pytorch_resnet.py  pytorch_wide_resnet.py
deep500/utils/: device.py  download.py  event.py  metric.py  metrics.py  mpi_helper.py  tensor_desc.py
deep500/utils/onnx_interop/: __init__.py  emptyoperations_visitor.py  extended_operations.py  extended_operations_visitor.py  generate_operators.py  generated_operators.py  loss_operations_visitor.py  losses.py  onnx_base_visitor.py  onnx_objects.py  onnx_test_parser.py  operations_visitor.py  parser.py
recipes/: cifar10_resnet44.py  imagenet_resnet50.py  recipe.py
samples/: accelegrad.py  dataset_latency.py  distributed_training.py  mnist_bias.py  network_inference.py  onnxtest.py  synthetic_dataset.py  tf_native_operator.py  tf_native_training.py  train_mnist.py  train_until.py  ucf101_resnetlstm.py
samples/deepbench/: conv_overhead_caffe2.py  conv_overhead_pytorch.py  conv_overhead_tensorflow.py  deepbench.py  gemm_overhead_caffe2.py  gemm_overhead_pytorch.py  gemm_overhead_tensorflow.py
tutorials/: README.md  custom_optimizer.ipynb  operator.md
